ORC-586: [C++] get rid of most std::unique_ptr<T>::release() invocations

Using std::unique_ptr<T>::release() opens up possibilities for memory
leaks. The library used it most of the times inside loops that filled
a vector of raw pointers. I substituted the raw pointers to
std::unique_ptrs.

However I didn't change the definition of StructVectorBatch and
UnionVectorBatch to avoid breaking changes (they are part of the
public API).